removed hosts that were not needed

--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 DEBUG=0
 SECRET_KEY=local_key
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1] 0.0.0.0
+DJANGO_ALLOWED_HOSTS=0.0.0.0
 
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=hello_django_dev
