--- a/data/nginx/ngix.dev.conf
+++ b/data/nginx/ngix.dev.conf
@@ -55,6 +55,15 @@ server {
 		proxy_redirect off;
 	}
 
+	location /volunteernow {
+		proxy_pass http://django_app/volunteernow;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_set_header X-Forwarded-Hose $host;
+		proxy_set_header Host $host;
+		proxy_redirect off;
+	}
+
 	location /static_django/ {
 		alias /home/django_app/web/static_django/;
 	}
